test_fm/_test49.nj
//
// method called with too few arguments
//


class Aux1 extends Object {
}


class Aux2 extends Aux1 {
}


public class Main extends Object {

  public static void main() {
    Main.f();
  }

  static void f(Aux2 x) {
  }

}
